--- a/packages/web/src/styles/global.css
+++ b/packages/web/src/styles/global.css
@@ -1,3 +1,50 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-zinc-800 text-zinc-300;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply text-emerald-500 font-bold;
+}
+
+h1 {
+  @apply text-3xl;
+}
+
+h2 {
+  @apply text-xl;
+}
+
+h3 {
+  @apply text-lg;
+}
+
+h4 {
+  @apply text-base;
+}
+
+h5 {
+  @apply text-sm;
+}
+
+span,
+p {
+  @apply text-base;
+}
+
+body,
+#app {
+  @apply min-h-screen;
+}
+
+#app {
+  @apply flex items-center justify-center;
+}
